--- a/login.html
+++ b/login.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Personal Budget Tracker</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
   <div id="welcome-container" class="container">
-    <h1>💸 Welcome to
+    <h1>💸 Welcome 🏦
       <br>
-      Budget Tracker
+      Personal Budget Tracker
     </h1>
-    <p>Design Engineering Sem 5 Project display. 😊</p>
+    <p>😊 Design Engineering Project Display. 😁</p>
     <hr>
     <br>
     <form id="welcome-form">
@@ -24,9 +24,15 @@
       </div>
       <button class="btn" type="submit">Enter</button>
     </form>
+    <br>
+    <br>
+    <div class="theme-toggle">
+      <label for="theme-switch">Dark Mode</label>
+      <input type="checkbox" id="theme-switch">
+    </div>
   </div>
 
-  <script src="login.js"></script>
+  <script src="script/login.js"></script>
 </body>
 
 </html>
